fix jumping-background chrome/safari

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -1,6 +1,20 @@
+body,
+html {
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
+}
 html {
   box-sizing: border-box; 
-  height: 100%; 
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-color: $top-background-color;
 }
 *,
 *:before,
@@ -8,9 +22,16 @@ html {
   box-sizing: inherit;
 }
 body {  
-  height: 100%;
+  position: relative;
+  height: 100vh;
+  width: 100%;
   margin: 0;
   word-break: break-word;
+  background-color: $top-background-color;
+  overflow: auto;
+}
+#root{
+  height: 100%;
 }
 label {
   cursor: pointer;
