--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -29,3 +29,4 @@ $pad-y: 15px;
 $maxcontentwidth: 1920px;
 $header-height: 100px;
 $header-sm-height: 50px;
+$top-background-color: $yellow;
