--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -4,19 +4,3 @@
 @import "./typography.scss";
 @import "./fonts";
 @import "./slick";
-
-body,
-html {
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-overflow-scrolling: touch;
-  background-color: #eee;
-}
-#root{
-  height: 100%;
-}
